--- a/environment.yml
+++ b/environment.yml
@@ -15,8 +15,10 @@ dependencies:
   - async-timeout=4.0.1=pyhd3eb1b0_0
   - attrs=21.4.0=pyhd3eb1b0_0
   - backcall=0.2.0=pyhd3eb1b0_0
+  - beautifulsoup4=4.11.1=py38h06a4308_0
   - black=19.10b0=py_0
   - blas=1.0=mkl
+  - bleach=4.1.0=pyhd3eb1b0_0
   - blinker=1.4=py38h06a4308_0
   - bottleneck=1.3.4=py38hce1f21e_0
   - brotli=1.0.9=he6710b0_2
@@ -35,6 +37,7 @@ dependencies:
   - dbus=1.13.18=hb2f20db_0
   - debugpy=1.5.1=py38h295c915_0
   - decorator=5.1.1=pyhd3eb1b0_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
   - dm-tree=0.1.5=py38h51133e4_0
   - entrypoints=0.4=py38h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
@@ -57,14 +60,18 @@ dependencies:
   - icu=58.2=he6710b0_3
   - idna=3.3=pyhd3eb1b0_0
   - importlib-metadata=4.11.3=py38h06a4308_0
+  - importlib_resources=5.2.0=pyhd3eb1b0_1
   - intel-openmp=2021.4.0=h06a4308_3561
   - ipykernel=6.9.1=py38h06a4308_0
   - ipython=8.3.0=py38h06a4308_0
   - jedi=0.18.1=py38h06a4308_1
+  - jinja2=3.0.3=pyhd3eb1b0_0
   - joblib=1.1.0=pyhd3eb1b0_0
   - jpeg=9e=h7f8727e_0
+  - jsonschema=4.4.0=py38h06a4308_0
   - jupyter_client=7.2.2=py38h06a4308_0
   - jupyter_core=4.10.0=py38h06a4308_0
+  - jupyterlab_pygments=0.1.2=py_0
   - keras-preprocessing=1.1.2=pyhd3eb1b0_0
   - kiwisolver=1.3.2=py38h295c915_0
   - lcms2=2.12=h3be6417_0
@@ -86,9 +93,11 @@ dependencies:
   - libxml2=2.9.12=h03d6c58_0
   - lz4-c=1.9.3=h295c915_1
   - markdown=3.3.4=py38h06a4308_0
+  - markupsafe=2.0.1=py38h27cfd23_0
   - matplotlib=3.5.1=py38h06a4308_1
   - matplotlib-base=3.5.1=py38ha18d171_1
   - matplotlib-inline=0.1.2=pyhd3eb1b0_2
+  - mistune=0.8.4=py38h7b6447c_1000
   - mkl=2021.4.0=h06a4308_640
   - mkl-service=2.4.0=py38h7f8727e_0
   - mkl_fft=1.3.1=py38hd3c417c_0
@@ -96,6 +105,9 @@ dependencies:
   - multidict=5.2.0=py38h7f8727e_2
   - munkres=1.1.4=py_0
   - mypy_extensions=0.4.3=py38h06a4308_1
+  - nbclient=0.5.13=py38h06a4308_0
+  - nbconvert=6.4.4=py38h06a4308_0
+  - nbformat=5.3.0=py38h06a4308_0
   - ncurses=6.3=h7f8727e_2
   - nest-asyncio=1.5.5=py38h06a4308_0
   - numexpr=2.8.1=py38h6abb31d_0
@@ -106,6 +118,7 @@ dependencies:
   - opt_einsum=3.3.0=pyhd3eb1b0_1
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.4.2=py38h295c915_0
+  - pandocfilters=1.5.0=pyhd3eb1b0_0
   - parso=0.8.3=pyhd3eb1b0_0
   - pathspec=0.7.0=py_0
   - pcre=8.45=h295c915_0
@@ -125,9 +138,11 @@ dependencies:
   - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pyparsing=3.0.4=pyhd3eb1b0_0
   - pyqt=5.9.2=py38h05f1152_4
+  - pyrsistent=0.18.0=py38heee7806_0
   - pysocks=1.7.1=py38h06a4308_0
   - python=3.8.0=h0371630_2
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-fastjsonschema=2.15.1=pyhd3eb1b0_0
   - python-flatbuffers=2.0=pyhd3eb1b0_0
   - pytz=2021.3=pyhd3eb1b0_0
   - pyzmq=22.3.0=py38h295c915_2
@@ -142,6 +157,7 @@ dependencies:
   - setuptools=61.2.0=py38h06a4308_0
   - sip=4.19.13=py38h295c915_0
   - six=1.16.0=pyhd3eb1b0_1
+  - soupsieve=2.3.1=pyhd3eb1b0_0
   - sqlite=3.33.0=h62c20be_0
   - stack_data=0.2.0=pyhd3eb1b0_0
   - tensorboard=2.4.0=pyhc547734_0
@@ -150,6 +166,7 @@ dependencies:
   - tensorflow-base=2.4.1=mkl_py38h43e0292_0
   - tensorflow-estimator=2.6.0=pyh7b7c402_0
   - termcolor=1.1.0=py38h06a4308_1
+  - testpath=0.5.0=pyhd3eb1b0_0
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.11=h1ccaba5_0
   - toml=0.10.2=pyhd3eb1b0_0
@@ -160,6 +177,7 @@ dependencies:
   - typing_extensions=4.1.1=pyh06a4308_0
   - urllib3=1.26.9=py38h06a4308_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
+  - webencodings=0.5.1=py38_1
   - werkzeug=2.0.3=pyhd3eb1b0_0
   - wheel=0.37.1=pyhd3eb1b0_0
   - wrapt=1.13.3=py38h7f8727e_2
