--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 absl-py==1.0.0
 asttokens==2.0.5
 astunparse==1.6.3
+attrs==21.4.0
 backcall==0.2.0
+beautifulsoup4==4.11.1
 black==22.3.0
+bleach==5.0.0
 cachetools==5.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
@@ -11,9 +14,11 @@ cloudpickle==2.0.0
 cycler==0.11.0
 debugpy==1.6.0
 decorator==5.1.1
+defusedxml==0.7.1
 dm-tree==0.1.7
 entrypoints==0.4
 executing==0.8.3
+fastjsonschema==2.15.3
 flatbuffers==2.0
 fonttools==4.33.3
 gast==0.5.3
@@ -27,26 +32,36 @@ gym-notices==0.0.6
 h5py==3.6.0
 idna==3.3
 importlib-metadata==4.11.3
+importlib-resources==5.7.1
 ipykernel==6.13.0
 ipython==8.3.0
 jedi==0.18.1
+Jinja2==3.1.2
 joblib==1.1.0
+jsonschema==4.4.0
 jupyter-client==7.3.0
 jupyter-core==4.10.0
+jupyterlab-pygments==0.2.2
 keras==2.8.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.2
 libclang==14.0.1
 Markdown==3.3.6
+MarkupSafe==2.1.1
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
+mistune==0.8.4
 mypy-extensions==0.4.3
+nbclient==0.6.2
+nbconvert==6.5.0
+nbformat==5.4.0
 nest-asyncio==1.5.5
 numpy==1.22.3
 oauthlib==3.2.0
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.4.2
+pandocfilters==1.5.0
 parso==0.8.3
 pathspec==0.9.0
 pexpect==4.8.0
@@ -63,6 +78,7 @@ pyasn1-modules==0.2.8
 pygame==2.1.0
 Pygments==2.12.0
 pyparsing==3.0.8
+pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.1
 pyzmq==22.3.0
@@ -72,6 +88,7 @@ rsa==4.8
 scikit-learn==1.0.2
 scipy==1.8.0
 six==1.16.0
+soupsieve==2.3.2.post1
 stack-data==0.2.0
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
@@ -83,6 +100,7 @@ termcolor==1.1.0
 tf-agents==0.12.1
 tf-estimator-nightly==2.8.0.dev2021122109
 threadpoolctl==3.1.0
+tinycss2==1.1.1
 tokenize-rt==4.2.1
 tomli==2.0.1
 tornado==6.1
@@ -90,6 +108,7 @@ traitlets==5.1.1
 typing_extensions==4.2.0
 urllib3==1.26.9
 wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==2.1.2
 wrapt==1.14.1
 zipp==3.8.0
