--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: mlprague
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
@@ -24,9 +25,9 @@ dependencies:
   - brotli=1.0.9=he6710b0_2
   - brotlipy=0.7.0=py38h27cfd23_1003
   - c-ares=1.18.1=h7f8727e_0
-  - ca-certificates=2022.4.26=h06a4308_0
+  - ca-certificates=2022.5.18.1=ha878542_0
   - cachetools=4.2.2=pyhd3eb1b0_0
-  - certifi=2021.10.8=py38h06a4308_2
+  - certifi=2022.5.18.1=py38h578d9bd_0
   - cffi=1.15.0=py38h7f8727e_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.0.4=py38h06a4308_0
@@ -114,7 +115,7 @@ dependencies:
   - numpy=1.21.5=py38he7a7128_2
   - numpy-base=1.21.5=py38hf524024_2
   - oauthlib=3.1.0=py_0
-  - openssl=1.1.1n=h7f8727e_0
+  - openssl=1.1.1o=h7f8727e_0
   - opt_einsum=3.3.0=pyhd3eb1b0_1
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.4.2=py38h295c915_0
@@ -144,6 +145,7 @@ dependencies:
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.15.1=pyhd3eb1b0_0
   - python-flatbuffers=2.0=pyhd3eb1b0_0
+  - python_abi=3.8=2_cp38
   - pytz=2021.3=pyhd3eb1b0_0
   - pyzmq=22.3.0=py38h295c915_2
   - qt=5.9.7=h5867ecd_1
@@ -160,10 +162,7 @@ dependencies:
   - soupsieve=2.3.1=pyhd3eb1b0_0
   - sqlite=3.33.0=h62c20be_0
   - stack_data=0.2.0=pyhd3eb1b0_0
-  - tensorboard=2.4.0=pyhc547734_0
   - tensorboard-plugin-wit=1.6.0=py_0
-  - tensorflow=2.4.1=mkl_py38hb2083e0_0
-  - tensorflow-base=2.4.1=mkl_py38h43e0292_0
   - tensorflow-estimator=2.6.0=pyh7b7c402_0
   - termcolor=1.1.0=py38h06a4308_1
   - testpath=0.5.0=pyhd3eb1b0_0
@@ -191,6 +190,13 @@ dependencies:
     - gin-config==0.5.0
     - gym==0.23.1
     - gym-notices==0.0.6
+    - keras==2.8.0
+    - libclang==14.0.1
     - pygame==2.1.0
+    - tensorboard==2.8.0
+    - tensorboard-data-server==0.6.1
+    - tensorflow==2.8.0
+    - tensorflow-io-gcs-filesystem==0.26.0
     - tensorflow-probability==0.16.0
     - tf-agents==0.12.1
+    - tf-estimator-nightly==2.8.0.dev2021122109
