--- a/environment.yml
+++ b/environment.yml
@@ -3,67 +3,44 @@ channels:
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
-  - _openmp_mutex=4.5=1_gnu
-  - _tflow_select=2.3.0=mkl
-  - absl-py=0.15.0=pyhd3eb1b0_0
-  - aiohttp=3.8.1=py38h7f8727e_1
-  - aiosignal=1.2.0=pyhd3eb1b0_0
+  - _openmp_mutex=5.1=1_gnu
   - appdirs=1.4.4=pyhd3eb1b0_0
-  - astor=0.8.1=py38h06a4308_0
+  - argon2-cffi=21.3.0=pyhd3eb1b0_0
+  - argon2-cffi-bindings=21.2.0=py38h7f8727e_0
   - asttokens=2.0.5=pyhd3eb1b0_0
-  - astunparse=1.6.3=py_0
-  - async-timeout=4.0.1=pyhd3eb1b0_0
   - attrs=21.4.0=pyhd3eb1b0_0
   - backcall=0.2.0=pyhd3eb1b0_0
   - beautifulsoup4=4.11.1=py38h06a4308_0
   - black=19.10b0=py_0
   - blas=1.0=mkl
   - bleach=4.1.0=pyhd3eb1b0_0
-  - blinker=1.4=py38h06a4308_0
   - bottleneck=1.3.4=py38hce1f21e_0
   - brotli=1.0.9=he6710b0_2
-  - brotlipy=0.7.0=py38h27cfd23_1003
-  - c-ares=1.18.1=h7f8727e_0
   - ca-certificates=2022.4.26=h06a4308_0
-  - cachetools=4.2.2=pyhd3eb1b0_0
-  - certifi=2021.10.8=py38h06a4308_2
+  - certifi=2022.5.18.1=py38h06a4308_0
   - cffi=1.15.0=py38h7f8727e_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - click=8.0.4=py38h06a4308_0
-  - cloudpickle=2.0.0=pyhd3eb1b0_0
-  - cryptography=36.0.0=py38h9ce1e76_0
   - cycler=0.11.0=pyhd3eb1b0_0
-  - dataclasses=0.8=pyh6d0b6a4_7
   - dbus=1.13.18=hb2f20db_0
   - debugpy=1.5.1=py38h295c915_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
-  - dm-tree=0.1.5=py38h51133e4_0
   - entrypoints=0.4=py38h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.4.4=h295c915_0
   - fontconfig=2.13.1=h6c09931_0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.11.0=h70c0345_0
-  - frozenlist=1.2.0=py38h7f8727e_0
-  - gast=0.4.0=pyhd3eb1b0_0
   - giflib=5.2.1=h7b6447c_0
   - glib=2.63.1=h5a9c865_0
-  - google-auth=2.6.0=pyhd3eb1b0_0
-  - google-auth-oauthlib=0.4.4=pyhd3eb1b0_0
-  - google-pasta=0.2.0=pyhd3eb1b0_0
-  - grpcio=1.42.0=py38hce63b2e_0
   - gst-plugins-base=1.14.0=hbbd80ab_1
   - gstreamer=1.14.0=hb453b48_1
-  - h5py=2.10.0=py38hd6299e0_1
-  - hdf5=1.10.6=hb1b8bf9_0
   - icu=58.2=he6710b0_3
-  - idna=3.3=pyhd3eb1b0_0
-  - importlib-metadata=4.11.3=py38h06a4308_0
   - importlib_resources=5.2.0=pyhd3eb1b0_1
   - intel-openmp=2021.4.0=h06a4308_3561
   - ipykernel=6.9.1=py38h06a4308_0
   - ipython=8.3.0=py38h06a4308_0
+  - ipython_genutils=0.2.0=pyhd3eb1b0_1
   - jedi=0.18.1=py38h06a4308_1
   - jinja2=3.0.3=pyhd3eb1b0_0
   - joblib=1.1.0=pyhd3eb1b0_0
@@ -72,27 +49,24 @@ dependencies:
   - jupyter_client=7.2.2=py38h06a4308_0
   - jupyter_core=4.10.0=py38h06a4308_0
   - jupyterlab_pygments=0.1.2=py_0
-  - keras-preprocessing=1.1.2=pyhd3eb1b0_0
-  - kiwisolver=1.3.2=py38h295c915_0
+  - kiwisolver=1.4.2=py38h295c915_0
   - lcms2=2.12=h3be6417_0
   - libedit=3.1.20210910=h7f8727e_0
   - libffi=3.2.1=hf484d3e_1007
-  - libgcc-ng=9.3.0=h5101ec6_17
+  - libgcc-ng=11.2.0=h1234567_0
   - libgfortran-ng=7.5.0=ha8ba4b0_17
   - libgfortran4=7.5.0=ha8ba4b0_17
-  - libgomp=9.3.0=h5101ec6_17
+  - libgomp=11.2.0=h1234567_0
   - libpng=1.6.37=hbc83047_0
-  - libprotobuf=3.19.1=h4ff587b_0
   - libsodium=1.0.18=h7b6447c_0
-  - libstdcxx-ng=9.3.0=hd4cf53a_17
-  - libtiff=4.2.0=h85742a9_0
+  - libstdcxx-ng=11.2.0=h1234567_0
+  - libtiff=4.2.0=h2818925_1
   - libuuid=1.0.3=h7f8727e_2
   - libwebp=1.2.2=h55f646e_0
   - libwebp-base=1.2.2=h7f8727e_0
-  - libxcb=1.14=h7b6447c_0
-  - libxml2=2.9.12=h03d6c58_0
+  - libxcb=1.15=h7f8727e_0
+  - libxml2=2.9.14=h74e7548_0
   - lz4-c=1.9.3=h295c915_1
-  - markdown=3.3.4=py38h06a4308_0
   - markupsafe=2.0.1=py38h27cfd23_0
   - matplotlib=3.5.1=py38h06a4308_1
   - matplotlib-base=3.5.1=py38ha18d171_1
@@ -102,7 +76,6 @@ dependencies:
   - mkl-service=2.4.0=py38h7f8727e_0
   - mkl_fft=1.3.1=py38hd3c417c_0
   - mkl_random=1.2.2=py38h51133e4_0
-  - multidict=5.2.0=py38h7f8727e_2
   - munkres=1.1.4=py_0
   - mypy_extensions=0.4.3=py38h06a4308_1
   - nbclient=0.5.13=py38h06a4308_0
@@ -110,12 +83,11 @@ dependencies:
   - nbformat=5.3.0=py38h06a4308_0
   - ncurses=6.3=h7f8727e_2
   - nest-asyncio=1.5.5=py38h06a4308_0
+  - notebook=6.4.11=py38h06a4308_0
   - numexpr=2.8.1=py38h6abb31d_0
-  - numpy=1.21.5=py38he7a7128_2
-  - numpy-base=1.21.5=py38hf524024_2
-  - oauthlib=3.1.0=py_0
-  - openssl=1.1.1n=h7f8727e_0
-  - opt_einsum=3.3.0=pyhd3eb1b0_1
+  - numpy=1.22.3=py38he7a7128_0
+  - numpy-base=1.22.3=py38hf524024_0
+  - openssl=1.1.1o=h7f8727e_0
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.4.2=py38h295c915_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
@@ -126,71 +98,91 @@ dependencies:
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.0.1=py38h22f2fdc_0
   - pip=21.2.4=py38h06a4308_0
+  - prometheus_client=0.13.1=pyhd3eb1b0_0
   - prompt-toolkit=3.0.20=pyhd3eb1b0_0
-  - protobuf=3.19.1=py38h295c915_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pyasn1=0.4.8=pyhd3eb1b0_0
-  - pyasn1-modules=0.2.8=py_0
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.11.2=pyhd3eb1b0_0
-  - pyjwt=1.7.1=py38_0
-  - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pyparsing=3.0.4=pyhd3eb1b0_0
   - pyqt=5.9.2=py38h05f1152_4
   - pyrsistent=0.18.0=py38heee7806_0
-  - pysocks=1.7.1=py38h06a4308_0
   - python=3.8.0=h0371630_2
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.15.1=pyhd3eb1b0_0
-  - python-flatbuffers=2.0=pyhd3eb1b0_0
   - pytz=2021.3=pyhd3eb1b0_0
   - pyzmq=22.3.0=py38h295c915_2
   - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
   - regex=2022.3.15=py38h7f8727e_0
-  - requests=2.27.1=pyhd3eb1b0_0
-  - requests-oauthlib=1.3.0=py_0
-  - rsa=4.7.2=pyhd3eb1b0_1
   - scikit-learn=1.0.2=py38h51133e4_1
   - scipy=1.7.3=py38hc147768_0
+  - send2trash=1.8.0=pyhd3eb1b0_1
   - setuptools=61.2.0=py38h06a4308_0
   - sip=4.19.13=py38h295c915_0
   - six=1.16.0=pyhd3eb1b0_1
   - soupsieve=2.3.1=pyhd3eb1b0_0
   - sqlite=3.33.0=h62c20be_0
   - stack_data=0.2.0=pyhd3eb1b0_0
-  - tensorboard=2.4.0=pyhc547734_0
-  - tensorboard-plugin-wit=1.6.0=py_0
-  - tensorflow=2.4.1=mkl_py38hb2083e0_0
-  - tensorflow-base=2.4.1=mkl_py38h43e0292_0
-  - tensorflow-estimator=2.6.0=pyh7b7c402_0
-  - termcolor=1.1.0=py38h06a4308_1
+  - terminado=0.13.1=py38h06a4308_0
   - testpath=0.5.0=pyhd3eb1b0_0
   - threadpoolctl=2.2.0=pyh0d69192_0
-  - tk=8.6.11=h1ccaba5_0
+  - tk=8.6.11=h1ccaba5_1
   - toml=0.10.2=pyhd3eb1b0_0
   - tornado=6.1=py38h27cfd23_0
   - traitlets=5.1.1=pyhd3eb1b0_0
   - typed-ast=1.4.3=py38h7f8727e_1
   - typing-extensions=4.1.1=hd3eb1b0_0
   - typing_extensions=4.1.1=pyh06a4308_0
-  - urllib3=1.26.9=py38h06a4308_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - webencodings=0.5.1=py38_1
-  - werkzeug=2.0.3=pyhd3eb1b0_0
   - wheel=0.37.1=pyhd3eb1b0_0
-  - wrapt=1.13.3=py38h7f8727e_2
   - xz=5.2.5=h7f8727e_1
-  - yarl=1.6.3=py38h27cfd23_0
   - zeromq=4.3.4=h2531618_0
-  - zipp=3.7.0=pyhd3eb1b0_0
+  - zipp=3.8.0=py38h06a4308_0
   - zlib=1.2.12=h7f8727e_2
-  - zstd=1.4.9=haebb681_0
+  - zstd=1.5.2=ha4553b6_0
   - pip:
+    - absl-py==1.0.0
+    - astunparse==1.6.3
+    - cachetools==5.1.0
+    - charset-normalizer==2.0.12
+    - cloudpickle==2.1.0
+    - dm-tree==0.1.7
+    - flatbuffers==1.12
+    - gast==0.4.0
     - gin-config==0.5.0
+    - google-auth==2.6.6
+    - google-auth-oauthlib==0.4.6
+    - google-pasta==0.2.0
+    - grpcio==1.46.3
     - gym==0.23.1
     - gym-notices==0.0.6
+    - h5py==3.7.0
+    - idna==3.3
+    - importlib-metadata==4.11.4
+    - keras==2.9.0
+    - keras-preprocessing==1.1.2
+    - libclang==14.0.1
+    - markdown==3.3.7
+    - oauthlib==3.2.0
+    - opt-einsum==3.3.0
+    - protobuf==3.19.4
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
     - pygame==2.1.0
+    - requests==2.27.1
+    - requests-oauthlib==1.3.1
+    - rsa==4.8
+    - tensorboard==2.9.0
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.1
+    - tensorflow==2.9.1
+    - tensorflow-estimator==2.9.0
+    - tensorflow-io-gcs-filesystem==0.26.0
     - tensorflow-probability==0.16.0
+    - termcolor==1.1.0
     - tf-agents==0.12.1
+    - urllib3==1.26.9
+    - werkzeug==2.1.2
+    - wrapt==1.14.1
